// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot testing 1`] = `
[
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "flex": 1,
        "marginTop": 40,
        "paddingHorizontal": 20,
        "zIndex": 1,
      }
    }
  >
    <Text
      style={
        {
          "color": "black",
          "fontSize": 25,
          "fontWeight": "bold",
        }
      }
    >
      Hello Umesh
    </Text>
    <View
      style={
        {
          "marginVertical": 20,
        }
      }
    >
      <TextInput
        placeholder="Search here ..."
        style={
          {
            "borderColor": "black",
            "borderRadius": 40,
            "borderWidth": 0.5,
            "height": 40,
            "paddingLeft": 15,
          }
        }
      />
    </View>
    <RCTScrollView
      data={[]}
      getItem={[Function]}
      getItemCount={[Function]}
      keyExtractor={[Function]}
      onContentSizeChange={[Function]}
      onLayout={[Function]}
      onMomentumScrollBegin={[Function]}
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      removeClippedSubviews={false}
      renderItem={[Function]}
      scrollEventThrottle={50}
      showsVerticalScrollIndicator={false}
      stickyHeaderIndices={[]}
      viewabilityConfigCallbackPairs={[]}
    >
      <View />
    </RCTScrollView>
    <View
      style={
        {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "zIndex": -1,
        }
      }
    >
      <Text
        style={
          {
            "fontSize": 30,
            "fontWeight": "bold",
            "textTransform": "uppercase",
          }
        }
      >
        ADD NOTES
      </Text>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
    >
      <Image
        source={
          {
            "uri": "https://cdn-icons-png.flaticon.com/128/10695/10695021.png",
          }
        }
        style={
          {
            "borderRadius": 40,
            "bottom": 20,
            "height": 60,
            "position": "absolute",
            "right": 10,
            "width": 60,
          }
        }
      />
    </View>
  </View>,
  <Modal
    animationType="slide"
    hardwareAccelerated={false}
    visible={false}
  />,
]
`;

exports[`snapshot testing 2`] = `
<View
  style={
    {
      "marginVertical": 20,
    }
  }
>
  <TextInput
    placeholder="Search here ..."
    style={
      {
        "borderColor": "black",
        "borderRadius": 40,
        "borderWidth": 0.5,
        "height": 40,
        "paddingLeft": 15,
      }
    }
  />
</View>
`;

exports[`snapshot testing 3`] = `
[
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "flex": 1,
        "marginTop": 40,
        "paddingHorizontal": 20,
        "zIndex": 1,
      }
    }
  >
    <Text
      style={
        {
          "color": "black",
          "fontSize": 25,
          "fontWeight": "bold",
        }
      }
    >
      Hello Umesh
    </Text>
    <View
      style={
        {
          "marginVertical": 20,
        }
      }
    >
      <TextInput
        placeholder="Search here ..."
        style={
          {
            "borderColor": "black",
            "borderRadius": 40,
            "borderWidth": 0.5,
            "height": 40,
            "paddingLeft": 15,
          }
        }
      />
    </View>
    <RCTScrollView
      data={[]}
      getItem={[Function]}
      getItemCount={[Function]}
      keyExtractor={[Function]}
      onContentSizeChange={[Function]}
      onLayout={[Function]}
      onMomentumScrollBegin={[Function]}
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      removeClippedSubviews={false}
      renderItem={[Function]}
      scrollEventThrottle={50}
      showsVerticalScrollIndicator={false}
      stickyHeaderIndices={[]}
      viewabilityConfigCallbackPairs={[]}
    >
      <View />
    </RCTScrollView>
    <View
      style={
        {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "zIndex": -1,
        }
      }
    >
      <Text
        style={
          {
            "fontSize": 30,
            "fontWeight": "bold",
            "textTransform": "uppercase",
          }
        }
      >
        ADD NOTES
      </Text>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
    >
      <Image
        source={
          {
            "uri": "https://cdn-icons-png.flaticon.com/128/10695/10695021.png",
          }
        }
        style={
          {
            "borderRadius": 40,
            "bottom": 20,
            "height": 60,
            "position": "absolute",
            "right": 10,
            "width": 60,
          }
        }
      />
    </View>
  </View>,
  <Modal
    animationType="slide"
    hardwareAccelerated={false}
    visible={false}
  />,
]
`;

exports[`snapshot testing 4`] = `
[
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "flex": 1,
        "marginTop": 40,
        "paddingHorizontal": 20,
        "zIndex": 1,
      }
    }
  >
    <Text
      style={
        {
          "color": "black",
          "fontSize": 25,
          "fontWeight": "bold",
        }
      }
    >
      Hello Umesh
    </Text>
    <View
      style={
        {
          "marginVertical": 20,
        }
      }
    >
      <TextInput
        placeholder="Search here ..."
        style={
          {
            "borderColor": "black",
            "borderRadius": 40,
            "borderWidth": 0.5,
            "height": 40,
            "paddingLeft": 15,
          }
        }
      />
    </View>
    <RCTScrollView
      data={[]}
      getItem={[Function]}
      getItemCount={[Function]}
      keyExtractor={[Function]}
      onContentSizeChange={[Function]}
      onLayout={[Function]}
      onMomentumScrollBegin={[Function]}
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      removeClippedSubviews={false}
      renderItem={[Function]}
      scrollEventThrottle={50}
      showsVerticalScrollIndicator={false}
      stickyHeaderIndices={[]}
      viewabilityConfigCallbackPairs={[]}
    >
      <View />
    </RCTScrollView>
    <View
      style={
        {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "zIndex": -1,
        }
      }
    >
      <Text
        style={
          {
            "fontSize": 30,
            "fontWeight": "bold",
            "textTransform": "uppercase",
          }
        }
      >
        ADD NOTES
      </Text>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
    >
      <Image
        source={
          {
            "uri": "https://cdn-icons-png.flaticon.com/128/10695/10695021.png",
          }
        }
        style={
          {
            "borderRadius": 40,
            "bottom": 20,
            "height": 60,
            "position": "absolute",
            "right": 10,
            "width": 60,
          }
        }
      />
    </View>
  </View>,
  <Modal
    animationType="slide"
    hardwareAccelerated={false}
    visible={false}
  />,
]
`;

exports[`snapshot testing 5`] = `
<View
  testID="Note"
>
  <View
    style={
      {
        "backgroundColor": "white",
        "borderRadius": 15,
        "height": 100,
        "marginLeft": 5,
        "marginVertical": 8,
        "padding": 15,
        "width": 700,
      }
    }
  >
    <View
      style={
        {
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <View>
        <Text
          numberOfLines={2}
          style={
            {
              "color": "black",
              "fontSize": 16,
              "fontWeight": "bold",
            }
          }
          testID="Notetitle"
        />
        <Text
          numberOfLines={3}
          style={
            {
              "paddingTop": 8,
            }
          }
          testID="Notedesc"
        />
      </View>
      <View
        style={
          {
            "width": 50,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <Image
            alt="Edit"
            source={
              {
                "uri": "https://cdn-icons-png.flaticon.com/128/2951/2951136.png",
              }
            }
            style={
              {
                "height": 25,
                "marginBottom": 15,
                "marginLeft": 3,
                "width": 25,
              }
            }
            testID="Edit1"
          />
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <Image
            alt="Delete"
            source={
              {
                "uri": "https://cdn-icons-png.flaticon.com/128/10374/10374182.png",
              }
            }
            style={
              {
                "height": 30,
                "width": 30,
              }
            }
            testID="Delete1"
          />
        </View>
      </View>
    </View>
  </View>
  <Modal
    animationType="slide"
    hardwareAccelerated={false}
    visible={false}
  />
</View>
`;
